page_style.css
@import url(webfonts.css);
@import url("https://rsms.me/inter/inter.css");

body {
    font-family: "Inter", sans-serif;
    font-weight: 500;
    font-size: 18px;
    font-weight: 500;
    line-height: 1.75;
    color: #333;
}

p {
    max-width: 720px;
}

h2 {
    font-family: "VeronaSerial-bold";
    font-size: 36px;
    letter-spacing: 0.5;
    line-height: 1.3;
}

h3 {
    font-family: "VeronaSerial-bold";
    font-size: 24px;
    letter-spacing: 0.5;
    padding-bottom: 24px;
}

h4 {
    font-family: "Inter", sans-serif;
    font-weight: 700;
    font-size: 16px;
    padding-bottom: 16px;
}


main {
    margin: 10px;
    background-color: white;
    min-height: calc(100vh - 20px);
}

.main-case-study {
    margin: 0px;
    min-height: calc(100vh);
}

/* link styles */


a {
    text-decoration: none;
    font-weight: 500;
    color: #333;
    border-bottom: 2px solid #333;
    margin-bottom: 4px;
    transition: border-bottom 0.1s ease-in-out;
    padding-bottom: 4px;
}

a:hover {
    color: #333;
    border-bottom: 4px solid #333;
}

a:visited {
    color: #333;
}

.light {
    color: white;
    border-bottom: 2px solid white;
}

.light:hover {
    color: white;
    border-bottom: 4px solid white;
}

.light:visited {
    color: white;
    border-bottom: 4px solid white;
}

p {
    margin-bottom: 16px;
}

/* about page styles */

.about {
    background-color: #2f80ed;
}

header {
    text-align: center;
    padding: 24px 24px;
    border-bottom: 10px solid #2F80ED;
    color: #333;
}

.area.one {
    padding: 48px;
    border-bottom: 10px solid #2f80ed;
    background-image: url("assets/smiles.svg");
    background-repeat: repeat;
}

.area.two {
    padding: 48px;
    border-bottom: 10px solid #2f80ed;

}

.area.three {
    padding: 48px;
    background-image: url("assets/graph-paper.svg");
    background-repeat: repeat;
}

.area-content {
    max-width: 800px;
    margin-left: auto;
    margin-right: auto;
}

.hello img {
    border: 10px solid #2F80ED;
    max-width: 300px;
    transform: rotate(0deg);
    transition: all 0.2s;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
}

.hello img:hover {
    border: 10px solid #2F80ED;
    max-width: 300px;
    text-align: Center;
    transform: rotate(-6deg) scale(1.1);
}

.about-me {
    font-size: 24px;
    transform: rotate(-6deg);
    width: fit-content;
    border-bottom: 5px solid #2F80ED;
    padding-bottom: 20px;
    margin-bottom: 48px;

}




.button {
    display: inline-block;
    padding: 1em 1.2em;
    box-sizing: border-box;
    text-decoration: none;
    font-family: "Inter", sans-serif;
    font-weight: 500;
    color: #333;
    text-align: center;
    transition: all 0.2s;
    background-color: #fff;
    border: 5px solid #2f80ed;
    margin-right: 40px;
    transform: rotate(0deg);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.12), 0 2px 4px 0 rgba(0, 0, 0, 0.08);
}

.button:hover {
    border: 5px solid #2f80ed;
    transform: rotate(-4deg);
    box-shadow: 0 15px 30px 0 rgba(0, 0, 0, 0.11),
        0 5px 15px 0 rgba(0, 0, 0, 0.08);
}

/* Case study styles */

img {
    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.10);
}

.flex-grid {
    display: flex;
    padding: 80px 80px;
    align-items: center;
    justify-content: space-between;
}

.flex-grid.header {
    padding: 80px 0px 0px 80px;
}

.col-img {
    width: 62%;
}

.col-txt {
    width: 32%;
}

.thirds .col {
    width: 32%;
}

.header-block {
    display: flex;
}

.block {
    display: flex;
    justify-content: center;
    padding: 80px;
}

/* Installation specific styles */

.installation {
    background-color: #3923b7;
}

.installation-header {
    text-align: center;
    padding: 48px 24px;
    background-color: #3923b7;
    border-bottom: none;
}


.installation-footer {
    text-align: center;
    padding: 48px 24px;
    background-color: #3923b7;
    border-bottom: none;
}

.header-content {
    text-align: center;
}

.header-content h2 {
    padding-bottom: 80px;
}

.header-content img {
    width: 45%;
    box-shadow: none;
    transform: scale(1);
    transition: all 0.3s ease-in-out;
}

.header-content img:hover {
    width: 45%;
    box-shadow: none;
    transform: scale(1.05);
}

.caption {
    margin-top: 24px;
    font-size: 14px;
    font-weight: 700;
}

.center {
    text-align: center;
}

.research-image {
    margin-bottom: 24px;
}


/* sensor styles */

.sensor-case-study {
    overflow-x: hidden;
    margin: 0px;
}

.sensor {
    background-color: #fff;
}

.sensor header {
    background-color: #fff;
    color: #fff;
    border: none;
    padding: 48px 24px;
}

.sensor header a {
    color: #333;
    border-bottom: 2px solid #333;
}

.sensor header a:hover {
    color: #333;
    border-bottom: 4px solid #333;
}

.sensor header a:visited {
    color: #333;
    border-bottom: 4px solid #333;
}

.sensor-intro {
    background-color: #fff;
    color: #333;
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
}

.dark {
    background-color: #333;
    color: #fff;
}


.sensor-content {
    max-width: 960px;
    display: flex;
    margin-left: auto;
    margin-right: auto;
    align-items: center;
}

.sensor-block {
    padding: 80px 40px;
}

.sensor-block-content {
    max-width: 960px;
    margin-left: auto;
    margin-right: auto;
}

.sensor-block-content h2 {
    margin-bottom: 48px;
}

.sensor-block-content p {
    max-width: none;
}

.padding-above {
    padding-top: 40px;
}


.two-col-1 {
    width: 48%;
    padding: 0px 24px 0px 0px;
}

.two-col-2 {
    width: 48%;
}

.no-shadow {
    box-shadow: none;
}


.sensor-title {
    width: 38%;
    text-align: center;
}

.sensor-image {
    width: 58%;
}

.sensor-image img {
    box-shadow: none;
}

.num-line {
    font-weight: 700;
}

.no-padding {
    padding-bottom: 0px;
}

.full-width {
    background-color: #333;
}

.basement-pic {
    max-width: 320px;
}

.basement {
    padding-left: 24px;
    text-align: Center;
}

.sensor footer {
    background-color: #333;
    color: #fff;
    border: none;
}


.sensor footer {
    text-align: center;
    padding: 48px 24px;
    background-color: #333;
    border-bottom: none;
}



/* colors for sections */

.gray {
    background-color: #f5f7fa;
}

.purple {
    background-color: #3923b7;
    color: #fff;
}

.dark-gray {
    background-color: #242A35;
    color: #fff;
}

.dark-gray a {
    color: #fff;
    border-bottom: 2px solid #fff;
    transition: border-bottom 0.1s ease-in-out;
}

.dark-gray a:hover {
    color: #fff;
    border-bottom: 4px solid #fff;
}


/* responsive styles */



@media screen and (max-width:1200px) {

    h2 {
        font-size: 24px;
    }

    h3 {
        padding-top: 24px;
    }

    .flex-grid {
        display: block;
    }

    .thirds .col {
        width: 100%;
    }

    .col-txt {
        width: 100%;
    }

    .col-img {
        width: 100%;
    }

    .flex-grid.header {
        padding: 80px;
    }

    .flex-grid {
        padding: 80px;
    }

    .block {
        padding: 80px;
    }

    .sensor-intro {
        display: block;
    }

    .sensor-content {
        display: block;
    }

    .sensor-content img {
        max-width: 70%;
    }

    .two-col-1 {
        width: 100%;
        padding: 0px 24px 0px 0px;
    }

    .two-col-2 {
        width: 100%;
        text-align: center;
        padding-top: 40px;
    }

    .sensor-title {
        width: 100%;
        text-align: center;
        padding-top: 80px;
    }

    .sensor-image {
        width: 100%;
        text-align: center;
    }

    .sensor-image img {
        max-width: 400px;
        padding-top: 80px;
    }



}

@media only screen and (max-width: 600px) {

    .header-content img {
        width: 100%;
        transform: scale(1);
    }

    .header-content img:hover {
        width: 100%;
    }

    .flex-grid.header {
        padding: 24px;
    }

    .flex-grid {
        padding: 24px;
    }

    .block {
        padding: 24px;
    }

    .sensor-block {
        padding: 40px 24px;
    }

    .basement {
        padding-left: none;
    }
}

